--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "type": "module",
   "dependencies": {
     "body-parser": "^2.2.0",
+    "connect-mongodb-session": "^5.0.0",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.3"
   },
