--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^2.2.0",
     "connect-mongodb-session": "^5.0.0",
+    "dcryptjs": "^1.0.5",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
